# dynamic_fmap

./: .gitignore  README.md  pyproject.toml
dynamic_fmap/: __init__.py  rollout.py  train_with_force.py
dynamic_fmap/benchmarks/: maniskill.py
dynamic_fmap/benchmarks/maniskill/: dataset.py  envs.py  interactive_panda_spacemouse.py  mplan_panda_pick_duplicated.py  patch_to_maniskill.py  pick_from_duplicated.py  replay_trajectory.py
dynamic_fmap/benchmarks/maniskill/configs/: trajectory_files.yaml
dynamic_fmap/dataset/: ForcePredictionDataset.py
dynamic_fmap/force_label/: draw_gaussian_o3d.py  fmap_utils.py  force_annotation.py  replay_trajectory.py  test_mani_skill.py
dynamic_fmap/force_prediction/: train_torch.py
dynamic_fmap/model/: force_prediction_resnet.py  force_prediction_transformer.py  loss_L2_on_smoothed_grids.py  losses.py  set_transformer-copy.py  set_transformer.py  state_force_estimator.py
dynamic_fmap/policy/: train_with_force.py
dynamic_fmap/samples/: set_transformer_diffusion_sample.py  test_force_annotation.py  test_maniskill.py  test_sapien.py
dynamic_fmap/utils/: analyze_trajectory.py  embed_point_forces.py  fmap_utils.py  merge_hdf_files.py  normalization.py  plot_force_profile.py  trajectory_converter.py  viewer.py  viewer_rviz.py  visualize_feature.py
scripts/datagen/: replay_for_il.sh
scripts/train/: train_teacher_policy_with_force.sh
tests/: test_core.py
