[project]
name = "dynamic_fmap"
version = "0.1.0"
description = "A dynamic feature mapping library."
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
